# lcmp

./: Makefile.am  configure.ac  lcrp  lcrp.spec.in  lcrp_c_check.pl  lcrpd  version-gen.sh
example_configs/: lcrpd.conf
pylcrp/: Makefile.am  __init__.py  common.py  lcrp.py
src/: Makefile.am  debug.c  debug.h  lcrp.c  lcrp_changelog.c  lcrp_changelog.h  lcrpd.c  lcrpd.h
